- avoid chunked file-transfer for download of small files - fixed view company problem #7222 - change sort order of attached files - disable working with install-directory present - fixed layout problem Detail view of comment (on single page) cuts off first line #7217 - added old version of unit tests files

--- a/themes/clean/styles.css
+++ b/themes/clean/styles.css
@@ -985,7 +985,7 @@ div.block {
 
     /* this must be reversed in styles_ie.ccs */
     div.block.reduced_header div.extra_top {
-        margin-bottom:-15px;
+        margin-bottom:-2px;
     	position:relative;		
     
     }
@@ -2170,7 +2170,8 @@ div.wiki h1,div.wiki h2, div.wiki h3,div.wiki h4, div.wiki h5 {
     font-family: georgia;
 }
 div.wiki h1 {
-    font-size:21pt;
+    font-size:20pt;
+    line-height:110%;
 }
 
 div.wiki h2 {
